--- a/Lecture10-Data_Types.ipynb
+++ b/Lecture10-Data_Types.ipynb
@@ -2472,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2503,6 +2503,7 @@
        "      <th>payments</th>\n",
        "      <th>cities</th>\n",
        "      <th>countries</th>\n",
+       "      <th>payments_cut</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2515,6 +2516,7 @@
        "      <td>1610</td>\n",
        "      <td>Beijing</td>\n",
        "      <td>China</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2525,6 +2527,7 @@
        "      <td>957</td>\n",
        "      <td>London</td>\n",
        "      <td>England</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2535,6 +2538,7 @@
        "      <td>900</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2545,6 +2549,7 @@
        "      <td>1755</td>\n",
        "      <td>Madrid</td>\n",
        "      <td>Spain</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2555,6 +2560,7 @@
        "      <td>280</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(200, 300]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2565,6 +2571,7 @@
        "      <td>225</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(200, 300]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2575,6 +2582,7 @@
        "      <td>352</td>\n",
        "      <td>Munich</td>\n",
        "      <td>Germany</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -2585,6 +2593,7 @@
        "      <td>600</td>\n",
        "      <td>Munich</td>\n",
        "      <td>Germany</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2595,6 +2604,7 @@
        "      <td>1775</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -2605,6 +2615,7 @@
        "      <td>2106</td>\n",
        "      <td>Madrid</td>\n",
        "      <td>Spain</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -2615,6 +2626,7 @@
        "      <td>1980</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -2625,6 +2637,7 @@
        "      <td>790</td>\n",
        "      <td>Munich</td>\n",
        "      <td>Germany</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -2635,6 +2648,7 @@
        "      <td>1800</td>\n",
        "      <td>Mumbai</td>\n",
        "      <td>India</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -2645,6 +2659,7 @@
        "      <td>402</td>\n",
        "      <td>Beijing</td>\n",
        "      <td>China</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -2655,6 +2670,7 @@
        "      <td>1209</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -2665,6 +2681,7 @@
        "      <td>885</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -2675,6 +2692,7 @@
        "      <td>1425</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -2685,6 +2703,7 @@
        "      <td>525</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -2695,6 +2714,7 @@
        "      <td>756</td>\n",
        "      <td>London</td>\n",
        "      <td>England</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -2705,6 +2725,7 @@
        "      <td>986</td>\n",
        "      <td>Sydney</td>\n",
        "      <td>Australia</td>\n",
+       "      <td>(300, 2106]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2733,30 +2754,30 @@
        "18          9  consulting    London, England          84       756   London   \n",
        "19         17     lecture  Sydney, Australia          58       986   Sydney   \n",
        "\n",
-       "     countries  \n",
-       "0        China  \n",
-       "1      England  \n",
-       "2    Australia  \n",
-       "3        Spain  \n",
-       "4    Australia  \n",
-       "5    Australia  \n",
-       "6      Germany  \n",
-       "7      Germany  \n",
-       "8    Australia  \n",
-       "9        Spain  \n",
-       "10   Australia  \n",
-       "11     Germany  \n",
-       "12       India  \n",
-       "13       China  \n",
-       "14   Australia  \n",
-       "15   Australia  \n",
-       "16   Australia  \n",
-       "17   Australia  \n",
-       "18     England  \n",
-       "19   Australia  "
+       "     countries payments_cut  \n",
+       "0        China  (300, 2106]  \n",
+       "1      England  (300, 2106]  \n",
+       "2    Australia  (300, 2106]  \n",
+       "3        Spain  (300, 2106]  \n",
+       "4    Australia   (200, 300]  \n",
+       "5    Australia   (200, 300]  \n",
+       "6      Germany  (300, 2106]  \n",
+       "7      Germany  (300, 2106]  \n",
+       "8    Australia  (300, 2106]  \n",
+       "9        Spain  (300, 2106]  \n",
+       "10   Australia  (300, 2106]  \n",
+       "11     Germany  (300, 2106]  \n",
+       "12       India  (300, 2106]  \n",
+       "13       China  (300, 2106]  \n",
+       "14   Australia  (300, 2106]  \n",
+       "15   Australia  (300, 2106]  \n",
+       "16   Australia  (300, 2106]  \n",
+       "17   Australia  (300, 2106]  \n",
+       "18     England  (300, 2106]  \n",
+       "19   Australia  (300, 2106]  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2764,24 +2785,22 @@
    "source": [
     "payments = itinery_df['payments']\n",
     "bucket = [0,100,200, 300, max(payments)]\n",
-    "payments = pd.cut(payments, bucket)\n",
-    "itinery_df\n",
-    "\n",
-    "\n"
+    "itinery_df ['payments_cut'] = pd.cut(payments, bucket)\n",
+    "itinery_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd133283be0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1331f3cc0>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2797,7 +2816,7 @@
     }
    ],
    "source": [
-    "payments.value_counts().sort_index().plot(kind='bar')"
+    "payments_cut.value_counts().sort_index().plot(kind='bar')"
    ]
   },
   {
